# back-end

./: db.sqlite3  pyproject.toml
alunos/: models.py
alunos/migrations/: 0001_initial.py  0002_cidade.py
config/: settings.py
