[project]
name = "back-end"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "gustavoalvhnr", email = "gustavoalves.ho@gmail.com"},
]
dependencies = ["django>=5.2.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
